--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -228,7 +228,9 @@ The verb became irregular, possibly under the influence of the semantically simi
 
 # {{lb|en|heading}} ''To capture, overtake.''
 ## {{lb|en|transitive}} To [[capture]] or [[snare]] (someone or something which would rather escape). {{defdate|from 13<sup>th</sup>c.}}
-##: {{ux|en|I hope I '''catch''' a fish.&emsp; {{nowrap|He ran but we '''caught''' him at the exit.}}&emsp; {{nowrap|The police '''caught''' the robber at a nearby casino.}}}}
+##: {{ux|en|I hope I '''catch''' a fish.}}
+##: {{ux|en|He ran but we '''caught''' him at the exit.}}
+##: {{ux|en|The police '''caught''' the robber at a nearby casino.}}
 ## {{lb|en|transitive}} To [[entrap]] or [[trip up]] a person; to [[deceive]]. {{defdate|from 14<sup>th</sup>c.}}
 ##* {{RQ:KJV|Mark|12|13||And they send unto him certain of the Pharisees and of the Herodians, to '''catch''' him in his words.}}
 ## {{lb|en|transitive|figuratively|dated}} To [[marry]] or enter into a similar [[relationship]] with.
@@ -240,13 +242,16 @@ The verb became irregular, possibly under the influence of the semantically simi
 ##: {{ux|en|If he '''catches''' you on the chin, you'll be on the mat.}}
 ##* {{quote-journal|en|date=September 28, 2011|author=Jon Smith|work=BBC Sport| title=[http://news.bbc.co.uk/sport2/hi/football/europe/14998331.stm Valencia 1-1 Chelsea]| passage=The visitors started brightly and had an early chance when Valencia's experienced captain David Albeda gifted the ball to Fernando Torres, but the striker was '''caught''' by defender Adil Rami as he threatened to shoot.}}
 ## {{lb|en|transitive}} To [[overtake]] or [[catch up]] to; to be in time for. {{defdate|from 17<sup>th</sup>c.}}
-##: {{ux|en|If you leave now you might '''catch''' him.&emsp; {{nowrap|I would love to have dinner but I have to '''catch''' a plane.}}}}
+##: {{ux|en|If you leave now you might '''catch''' him.}}
+##: {{ux|en|I would love to have dinner but I have to '''catch''' a plane.}}
 ##* '''2011''' ''{{w|Allen Gregory}}'', "Pilot" (season 1, episode 1):
 ##*: Allen Gregory DeLongpre: Did anyone '''catch''' the ''{{w|Charlie Rose (TV series)|Charlie Rose}}'' the evening before last. Did you '''catch''' it? No, nothing?
 ## {{lb|en|transitive}} To unpleasantly [[discover]] unexpectedly; to unpleasantly [[surprise]] (someone doing something). {{defdate|from 17<sup>th</sup>c.}}
-##: {{ux|en|He was '''caught''' on video robbing the bank.&emsp; {{nowrap|He was '''caught''' in the act of stealing a biscuit.}}}}
+##: {{ux|en|He was '''caught''' on video robbing the bank.}}
+##: {{ux|en|He was '''caught''' in the act of stealing a biscuit.}}
 ## {{senseid|en|conveyance}} {{lb|en|transitive}} To [[travel]] by means of. {{defdate|from 19<sup>th</sup>c.}}
 ##: {{ux|en|'''catch''' the bus}}
+##* {{RQ:Mansfield Bliss|page=273|passage=The glare, the flies, while they waited, and he and the stationmaster put their heads together over the time-table, trying to find this other train, which, of course, they wouldn't '''catch'''.}}
 ##* '''1987''', {{w|A.J. Quinnell}}, ''[http://books.google.com/books?id=GJc1izYyDIkC In the Name of the Father]'', p.111:
 ##*: After about a kilometer I '''caught''' a taxi to Santa Croce.
 ## {{lb|en|transitive|rare}} To become [[pregnant]]. (Only in past tense or as participle.) {{defdate|from 19<sup>th</sup>c.}}
@@ -257,14 +262,17 @@ The verb became irregular, possibly under the influence of the semantically simi
 ##: {{ux|en|I '''caught''' her by the arm and turned her to face me.}}
 ##* {{RQ:Spenser Faerie Queene|book=III|canto=II|passage=Her aged Nourse, whose name was Glaucè hight, / Feeling her leape out of her loathed nest, / Betwixt her feeble armes her quickly '''keight''' {{...}}}}
 ## {{lb|en|transitive}} To [[take]] or [[replenish]] something necessary, such as [[breath]] or [[sleep]]. {{defdate|from 14<sup>th</sup>c.}}
-##: {{ux|en|I have to stop for a moment and '''catch''' my breath.&emsp; {{nowrap|I '''caught''' some Z's on the train.}}}}
+##: {{ux|en|I have to stop for a moment and '''catch''' my breath}}
+##: {{ux|en|I '''caught''' some Z's on the train.}}
 ## {{lb|en|transitive}} To [[grip]] or [[entangle]]. {{defdate|from 17<sup>th</sup>c.}}
 ##: {{ux|en|My leg was '''caught''' in a tree-root.}}
 ## {{lb|en|intransitive}} To be [[hold back|held back]] or [[impede]]d.
-##: {{ux|en|Be careful your dress doesn't '''catch''' on that knob.&emsp; {{nowrap|His voice '''caught''' when he came to his father's name.}}}}
+##: {{ux|en|Be careful your dress doesn't '''catch''' on that knob.}}
+##: {{ux|en|His voice '''caught''' when he came to his father's name.}}
 ##* {{RQ:Jefferies Amateur Poacher|chapter=II|passage=Orion hit a rabbit once; but though sore wounded it got to the bury, and, struggling in, the arrow '''caught''' the side of the hole and was drawn out. Indeed, a nail filed sharp is not of much avail as an arrowhead; you must have it barbed, and that was a little beyond our skill.}}
 ## {{lb|en|intransitive}} To [[engage]] with some mechanism; to [[stick]], to succeed in interacting with something or initiating some process.
-##: {{ux|en|Push it in until it '''catches'''.&emsp; {{nowrap|The engine finally '''caught''' and roared to life.}}}}
+##: {{ux|en|Push it in until it '''catches'''.}}
+##: {{ux|en|The engine finally '''caught''' and roared to life.}}
 ## {{lb|en|transitive}} To have something be [[hold back|held back]] or [[impede]]d.
 ##: {{ux|en|I '''caught''' my heel on the threshold.}}
 ## {{lb|en|intransitive}} To make a [[grasp]]ing or [[snatch]]ing motion (at). {{defdate|from 17<sup>th</sup>c.}}
@@ -283,7 +291,8 @@ The verb became irregular, possibly under the influence of the semantically simi
 ##: {{ux|en|When the program '''catches''' an exception, this is recorded in the log file.}}
 # {{lb|en|heading}} ''To intercept.''
 ## {{lb|en|transitive}} To [[seize]] or intercept an object moving through the air (or, sometimes, some other medium). {{defdate|from 16<sup>th</sup>c.}}
-##: {{ux|en|I will throw you the ball, and you '''catch''' it.&emsp; {{nowrap|Watch me '''catch''' this raisin in my mouth.}}}}
+##: {{ux|en|I will throw you the ball, and you '''catch''' it.}}
+##: {{ux|en|Watch me '''catch''' this raisin in my mouth.}}
 ## {{lb|en|transitive|now|rare}} To [[seize]] (an [[opportunity]]) when it occurs. {{defdate|from 16<sup>th</sup>c.}}
 ##* {{RQ:Austen Sense and Sensibility||[[wikisource:Sense_and_Sensibility/Chapter_18|18]]|text=she internally resolved henceforward to '''catch''' every opportunity of eyeing the hair and of satisfying herself,{{nb...}}.}}
 ## {{lb|en|transitive|cricket}} To end a player's [[innings]] by catching a hit ball before the first bounce. {{defdate|from 18<sup>th</sup>c.}}
@@ -294,7 +303,8 @@ The verb became irregular, possibly under the influence of the semantically simi
 ## {{lb|en|transitive}} To be the victim of (something unpleasant, painful etc.). {{defdate|from 13<sup>th</sup>c.}}
 ##: {{ux|en|You're going to '''catch''' a beating if they find out.}}
 ## {{lb|en|transitive}} To be touched or affected by (something) through exposure. {{defdate|from 13<sup>th</sup>c.}}
-##: {{ux|en|The sunlight '''caught''' the leaves and the trees turned to gold.&emsp; {{nowrap|Her hair was '''caught''' by the light breeze.}}}}
+##: {{ux|en|The sunlight '''caught''' the leaves and the trees turned to gold.}}
+##: {{ux|en|Her hair was '''caught''' by the light breeze.}}
 ## {{lb|en|transitive}} To become [[infect]]ed by (an illness). {{defdate|from 16<sup>th</sup>c.}}
 ##: {{ux|en|Everyone seems to be '''catching''' the flu this week.}}
 ## {{lb|en|intransitive}} To spread by [[infection]] or similar means.
@@ -303,7 +313,8 @@ The verb became irregular, possibly under the influence of the semantically simi
 ##* '''1817''', {{w|Mary Martha Sherwood}}, ''Stories Explanatory of the Church Catechism''
 ##*: He accosted Mrs. Browne very civilly, told her his wife was very ill, and said he was sadly troubled to get a white woman to nurse her: "For," said he, "Mrs. Simpson has set it abroad that her fever is '''catching'''."
 ## {{lb|en|transitive|intransitive}} To [[receive]] or be affected by (wind, water, fire etc.). {{defdate|from 18<sup>th</sup>c.}}
-##: {{ux|en|The bucket '''catches''' water from the downspout.&emsp; {{nowrap|The trees '''caught''' quickly in the dry wind.}}}}
+##: {{ux|en|The bucket '''catches''' water from the downspout.}}
+##: {{ux|en|The trees '''caught''' quickly in the dry wind.}}
 ##* '''2003''', Jerry Dennis, ''[http://books.google.com/books?id=3P8lsPL0FQQC The Living Great Lakes]'', p.63:
 ##*: the sails '''caught''' and filled, and the boat jumped to life beneath us.
 ## {{lb|en|transitive}} To [[acquire]], as though by infection; to take on through sympathy or infection. {{defdate|from 16<sup>th</sup>c.}}
@@ -317,7 +328,8 @@ The verb became irregular, possibly under the influence of the semantically simi
 ##: {{ux|en|Well, if you didn't '''catch''' this time, we'll have more fun trying again until you do.}}
 # {{lb|en|heading}} ''To take in with one's senses or intellect.''
 ## {{lb|en|transitive}} To grasp mentally: [[perceive]] and [[understand]]. {{defdate|from 16<sup>th</sup>c.}}
-##: {{ux|en|Did you '''catch''' his name?&emsp; {{nowrap|Did you '''catch''' the way she looked at him?}}}}
+##: {{ux|en|Did you '''catch''' his name?}}
+##: {{ux|en|Did you '''catch''' the way she looked at him?}}
 ##* {{RQ:Chambers Younger Set|IX|passage=“A tight little craft,” was Austin’s invariable comment on the matron;{{nb...}}. ¶ Near her wandered her husband, orientally bland, invariably affable, and from time to time squinting sideways, as usual, in the ever-renewed expectation that he might '''catch''' a glimpse of his stiff, retroussé moustache.}}
 ## {{lb|en|transitive|informal}} To [[take in]]; to [[watch]] or [[listen]] to (an entertainment). {{defdate|from 20<sup>th</sup>c.}}
 ##: {{ux|en|I have some free time tonight so I think I'll '''catch''' a movie.}}
@@ -328,7 +340,8 @@ The verb became irregular, possibly under the influence of the semantically simi
 ##* '''2004''', Catherine Asaro, ''[http://books.google.com/books?id=O2Rj1kYTF1kC The Moon's Shadow]'', p.40
 ##*: No, a far more natural beauty '''caught''' him.
 ## {{lb|en|transitive}} To [[attract]] and [[hold]] (a faculty or organ of sense). {{defdate|from 17<sup>th</sup>c.}}
-##: {{ux|en|He managed to '''catch''' her attention.&emsp; {{nowrap|The enormous scarf did '''catch''' my eye.}}}}
+##: {{ux|en|He managed to '''catch''' her attention}}
+##: {{ux|en|The enormous scarf did '''catch''' my eye.}}
 # {{lb|en|heading}} ''To obtain or experience''
 
 ====Conjugation====
