--- a/en/昔/昔.16956.wikitext
+++ b/en/昔/昔.16956.wikitext
@@ -116,7 +116,7 @@ From {{inh|ja|ojp|sort=むかし|-}}. The ''muka'' portion derives from the {{m|
 #: {{ja-usex-inline|'''昔'''の[[人]]|'''むかし''' の ひと|'''ancient''' people}}
 #: {{ja-usex-inline|もう'''昔'''の[[話]]だ。|もう '''むかし''' の はなし だ。|That's [[ancient history]].}}
 
-=====Derived terms=====
+====Derived terms====
 * {{ja-r|昔 昔|むかし むかし}}
 
 ===References===
