--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -19,6 +19,7 @@ From {{inh|en|enm|curteyn}}, {{m|enm|corteyn}}, {{m|enm|cortyn}}, {{m|enm|cortin
 # A piece of [[cloth]] [[cover]]ing a [[window]], [[bed]], etc. to offer [[privacy]] and keep out [[light]].
 #* {{RQ:Belloc Lowndes Lodger|I|0016}}
 #*: Thus the red damask '''curtains''' which now shut out the fog-laden, drizzling atmosphere of the Marylebone Road, had cost a mere song, and yet they might have been warranted to last another thirty years. A great bargain also had been the excellent Axminster carpet which covered the floor; as, again, the arm-chair in which Bunting now sat forward, staring into the dull, small fire.
+#* {{quote-journal|en|year=1944|month=November and December|title="Duplex Roomette" Sleeping Cars|journal=Railway Magazine|page=324|text=It is realised that the old Pullman standard sleeper, with its convertible "sections", each containing upper and lower berths, and with no greater privacy at night than the '''curtains''' drawn along both sides of a middle aisle, has had its day.}}
 # A similar piece of cloth that separates the [[audience]] and the [[stage]] in a [[theater]].
 #* {{quote-book|en|year=1905|author=[[w:Emma Orczy|Baroness Emmuska Orczy]]
 |title=[[w:The Case of Miss Elliott|The Lisson Grove Mystery]]
