--- a/en/b/blonde.6881.wikitext
+++ b/en/b/blonde.6881.wikitext
@@ -53,10 +53,10 @@ From {{der|en|frm|-}} {{m|fr|blonde|g=f}}. See {{m|en|blond}}.
 # {{lb|en|especially|of a|woman|offensive}} [[stupid|Stupid]], [[ignorant]], [[naive]].
 #* {{quote-book|en|year=2005|author=Nancy Bartholomew|title=Lethally Blonde|publisher=Silhouette|isbn=9781552543771|page=8
 |passage=Emma&#39;s already huge green eyes widen and she gives me this look like, “Oh my God, sometimes you are just so '''blonde'''!”}}
-#* '''2014''', Aviva Drescher, ''Leggy Blonde: A Memoir'' (Simon and Schuster, {{ISBN|9781476722153}}):
-#*: I was so '''blonde''' I honestly had no idea why he got so angry. He cooled on me for a week or so.
-#* '''2003''', Bennett Fairorth, ''The Land Where My American Mother Died--Palermo, Sicily'' (iUniverse, {{ISBN|9780595279388}}), page 201:
-#*: “She was so '''blonde''', she studied for a blood test, when she went to the airport and saw a sign that said, &#39;Airport Left,&#39; she turned around and went home, when she heard that 90% of all crimes occur around the home, she moved.
+#* {{quote-book|en|year=2014|author=Aviva Drescher|title=Leggy Blonde: A Memoir|publisher=Simon and Schuster|isbn=9781476722153
+|passage=I was so '''blonde''' I honestly had no idea why he got so angry. He cooled on me for a week or so.}}
+#* {{quote-book|en|year=2003|author=Bennett Fairorth|title=The Land Where My American Mother Died--Palermo, Sicily|page=201|publisher=iUniverse|isbn=9780595279388
+|passage=“She was so '''blonde''', she studied for a blood test, when she went to the airport and saw a sign that said, &#39;Airport Left,&#39; she turned around and went home, when she heard that 90% of all crimes occur around the home, she moved.}}
 
 ====Usage notes====
 See the usage notes in the entry {{m|en|blond}}.
