--- a/en/坤/坤.13031.wikitext
+++ b/en/坤/坤.13031.wikitext
@@ -48,7 +48,7 @@
 # [[earth]]
 # [[feminine]], [[female]]
 # [[eighth]] of the eight [[trigram]]s (''[[bagua]]'') used in [[Taoist]] [[cosmology]], represented by the symbol [[☷]]
-# [[second]] [[hexagram]] of the [[I Ching]]
+# [[second]] [[hexagram]] of the [[I Ching]], represented by the symbol [[䷁]]
 
 ====Compounds====
 {{zh-der|*乾坤|乾坤一擲/乾坤一掷|*乾坤再造|坤伶|坤儀|坤元|坤宅|坤宮|坤寧宮|坤德|坤戲|坤書|坤書館|坤極|坤範|坤維|坤角|坤軸|坤輿|坤造|坤靈|坤鞋|壺裡乾坤/壶里乾坤|*弄乾坤|扭轉乾坤/扭转乾坤|旋乾轉坤/旋乾转坤|旋轉乾坤/旋转乾坤|浪蕩乾坤/放荡乾坤|顛乾倒坤/颠乾倒坤|顛倒乾坤/颠倒乾坤|坤厚}}
